--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,19 @@
 body{
 	background-color: #36465D;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+/*index.html*/
+#contenedor-padre{
+	margin-top: 10%;
+    width: 65%;
+    min-width: 350px;
 }
 
+#selector:hover{
+    box-shadow: inset 0 0 0 25px #36465D;
+}
 .div-post{
 	border: 2px solid red;
 	height: 100px;
@@ -11,4 +23,62 @@ body{
 .tamanio-img{
 	width: 50px;
 	height: 50px;
+}
+/*javascript*/
+/*formulario*/
+#contenedor{
+	margin-top: 20px;
+	border-radius: 5px;
+	background-color: white;
+	padding-bottom: 10px;
+	padding-left: 10px;
+	padding-right: 10px
+}
+
+#contenedor:hover{
+    box-shadow:
+       	1px 1px #53a7ea,
+        2px 2px #53a7ea,
+        3px 3px #53a7ea;
+    -webkit-transform: translateX(-3px);
+    transform: translateX(-3px);
+}
+
+#text-titulo{
+    border: none;
+    font-weight: 400;
+    font-size: 23px;
+    line-height: 47px;
+    padding: 20px 20px 20px 15px;
+    cursor: auto;
+    position: relative;
+    top: 5px;
+}
+
+#text-area{
+    border: none;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 26px;
+    padding: 20px;
+    cursor: auto;
+    position: relative;
+    top: 5px;
+}
+
+#texto-btn-publicar{
+	background-color: #529ECC;
+	border-color: #529ECC;
+	color: white;
+    position: relative;
+    top: 5px;
+}
+
+#texto-btn-cerrar{
+	float: right;
+	background-color: #9DA6AF;
+	border-color: #9DA6AF;
+	color: white;
+    position: relative;
+    top: 5px;
 }
